# smbusb

./: .gitignore  CMakeLists.txt  README.md  configure.ac  fx2lib.patch
lib/: CMakeLists.txt  Config.cmake.in  Makefile.am  README.md  build.bat  libsmbusb.h  smbusb-fx2lp.c  smbusb-i2cdev.c  smbusb.c  smbusb_priv.h
lib/cmake/modules/: FindLIBUSB1.cmake
myblocks/: eep2.sh
tools/: CMakeLists.txt  smbusb_bq8030flasher.c  smbusb_comm.c  smbusb_m37512flasher.c  smbusb_r2j240flasher.c  smbusb_sbsreport.c  smbusb_scan.c
